--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-grid": "^2.7.5",
+    "@devexpress/dx-react-grid-material-ui": "^2.7.5",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.31",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.31",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "avataaars": "^1.2.2",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "mui-datatables": "^3.7.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
